# gramex

./: .bandit  .bowerrc  .ecrc  .editorconfig  .eslintignore  .eslintrc.js  .eslintrc.yml  .gitignore  .gitlab-ci.yml  .htmllintrc  .prettierignore  .snyk  .stylelintignore  .stylelintignore.yml  .stylelintrc.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  DESIGN.rst  HISTORY.rst  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  OFFLINE.md  README.md  README.rst  anaconda-setup.sh  bower.json  commitlint.config.js  config.ini  package-lock.json  package.json  pyproject.toml  requirements-conda.txt  requirements-dev.txt  requirements.txt  setup-dev.sh  setup.cfg  setup.py  (+3 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.gitlab/issue_templates/: bug.md  feature.md
docs/: Makefile  building.rst  components.rst  conf.py  design.rst  distribution.rst  handlers.rst  index.rst  installation.rst  make.bat  server.rst  usage.rst
env/: pyvenv.cfg
gramex/: README.md  __init__.py  __main__.py  apps.yaml  cache.py  config.py  data.py  debug.py  deploy.yaml  dl.py  dl_utils.py  download.vega-lite.js  download.vega.js  functions.py  gramex.py  gramex.yaml  gramexfeatures.csv  gramexsize.csv  gramextest.py  handlers.py  http.py  install.py  license.py  migrate.py  ml.py  ml_api.py  nlp.py  production.yaml  pynode.py  release.json  scale.py  scheduler.py  secrets.py  servicenow.yaml  sm_api.py  task.py  timeseries.py  topcause.py  transformers.py  transforms.py  (+2 more)
gramex/apps/: .eslintrc.js  package.json
gramex/guide/: README.md  ROADMAP.md  gramex.yaml  guide.py  markdown.template  roadmap.md  style.css
gramex/handlers/: 400.html  401.html  403.html  404.html  500.html  __init__.py  auth.email.template.html  auth.recaptcha.template.html  auth.sms.template.html  auth.template.html  authhandler.py  basehandler.py  capturehandler.py  chatgpthandler.py  chathandler.py  comichandler.py  commenthandler.py  datahandler.py  datahandler.template.html  directoryhandler.py  drivehandler.py  filehandler.py  filehandler.template.html  filterhandler.py  forgot.template.html  formhandler.py  functionhandler.py  jsonhandler.py  messagehandler.py  mlhandler.py  modelhandler.py  openapiconfig.yaml  openapihandler.py  pptxhandler.py  processhandler.py  proxyhandler.py  queryhandler.template.html  signup.template.html  socialhandler.py  twitterresthandler.py  (+2 more)
gramex/help/: gramex.yaml  index.html
gramex/nlg/: grammar.py  narrative.py  search.py  utils.py  webapp.py
gramex/pptgen/: __init__.py  color.py  colors.json  commands.py  fonts.json  fontwidth.py  release.json  utils.py
gramex/pptgen2/: README.md  __init__.py  commands.py  config.yaml
gramex/services/: __init__.py  emailer.py  rediscache.py  scheduler.py  sms.py  storelocations.py  ttlcache.py  urlcache.py  watcher.py
gramex/transforms/: __init__.py  auth.py  badgerfish.py  rmarkdown.py  template.py  transforms.py  twitterstream.py
help-app/: calculations.py  gramex.yaml  index.yaml
mkdocs/: mkdocs.yml
mkdocs/docs/: cache.md  config.md  data.md  debug.md  emailer.md  gramex.md  handlers.md  http.md  index.md  install.md  license.md  ml.md  ml_api.md  pynode.md  readthedocs-extra.css  scale.md  scheduler.md  secrets.md  services.md  sm_api.md  storelocations.md  topcause.md  transforms.md  winservice.md
pkg/: build_conda.sh  build_docker.sh  build_pypi.sh  build_tempaltes.py  setup.sh  testing.md
pkg/conda/: .gitignore  README.md  bld.bat  build.sh  conda-setup.py  conda_build_config.yaml  template.bld.bat  template.meta.yaml  template.post-link.bat  template.post-link.sh  tmpl.post-link.bat
pkg/docker-gramex/: Dockerfile  setup.sh
pkg/docker-gramex-base/: Dockerfile  setup.sh
pkg/docker-gramex-pytest/: Dockerfile  setup.sh
pkg/docker-gramex-test/: Dockerfile  setup.sh
pkg/docker-py3/: Dockerfile  Dockerfile.tmpl  README.md  build.py  test.sh
pkg/offline/: build.tmpl  offline-setup.py  template.install.sh
pkg/tests/: amazon_linux_2.sh  centos7.sh  test_amazon_linux.sh  test_amazon_linux_2.sh  test_centos7.sh  test_ubuntu.sh  ubuntu.sh
pkg/usage/: gramexsize.py  gramexsize.yaml
poc/: config.py  confutil.py  gramex.py  gramex.yaml  handlers.py  main.py  requirements.txt  scheduler.py
poc/tests/: config.a.yaml  config.final.yaml
pytest/: Docker-compose.yaml  dbutils.py  gramex.yaml  mockgpt.py  mockgpt.yaml  run.sh  test_auth.py  test_cache_module.py  test_chatgpthandler.py  test_cli.py  test_cli_features.py  test_complexity.py  test_data.py  test_formhandler.py  test_json.py  test_messagehandler.py  test_validate.py  utils.py
pytest/complexity-basic/: expected.json  gramex.yaml  increase_complexity.py  index.js
reports/: bandit.txt  clamav.txt  gramexsize.csv  loc.csv  npm-audit.txt  snyk.txt  syft.txt  trivy.txt
testlib/: README.md  __init__.py  auto_test.csv  autolyse.json  id_rsa  id_rsa.pub  input.pptx  input2.pptx  iris.csv  sales-query.sql  sales.xlsx  script1.R  script2.R  scriptpath.R  scriptplot.R  slidesense-config.yaml  slidesense-gramex.yaml  subprocess_check.py  test_app_formhandler.py  test_auth.py  test_cache.py  test_cache_module.py  test_data.py  test_debug.py  test_email.py  test_encrypt.py  test_insert.db  test_install.py  test_json.py  test_license.py  test_log.py  test_ml.py  test_pptgen.py  test_pptgen2.py  test_r.py  test_scale.py  test_secrets.py  test_setup.py  test_store.py  test_transforms.py  (+2 more)
tests/: .secrets.yaml  .snyk  403-template.html  README.md  __init__.py  actors.csv  auth.html  auth2.html  config.template.base.yaml  config.template.child.yaml  dbauth.html  dbutils.py  error-404.json  filetest.tmpl.html  formhandler-edit.html  functionutils.py  gramex.yaml  gramextest.yaml  id_rsa  id_rsa.pub.pem  index.template.html  iris.csv  lookup.xlsx  openapiresponse.yaml  processtest.py  remote-secrets.yaml  requirements.txt  rules.csv  rules.db  rules.xlsx  sales.xlsx  sales_join.xlsx  server.py  subprocess_check.py  template-alert.md  template-alert.txt  template.html  template.pptx  test_admin.py  test_alerts.py  (+59 more)
tests/ts/: a.ts  (+1 more)
(+1169 files in other folders)
